edit center added

--- a/src/app/Admin/components/edit-center/edit-center.component.html
+++ b/src/app/Admin/components/edit-center/edit-center.component.html
@@ -121,7 +121,7 @@
         Close
       </button>
       <button
-        [disabled]="editCenterForm.invalid"
+        [disabled]="(editCenterForm.invalid || invalidImg) && imageSelect"
         mat-raised-button
         color="primary"
         (click)="editCenter()"
